Fixed newsletter returned when searching for proposition by id
